Revert "search history to application data"
This reverts commit 6c28e7efc7e878de4b084decd2cf3057c2f3cbdf [formerly 3b0edae5c32c6d4c85e996327eda193aae1c499a] [formerly 8a67a87d0102efcea649448fa22556d1afa0aae4 [formerly 71d98df938bf9fcc80466752080a644a9af79dd9]].


Former-commit-id: a46198f7af93157775aa4335e217a79e3182d58e [formerly df4481591c18fa27a4eea3e8fee86d2076367011]
Former-commit-id: e5a5efdad508e45b8a31b82d95807c42bb559c39

--- a/ExViewer/Themes/ImagePresenterTemplates.xaml
+++ b/ExViewer/Themes/ImagePresenterTemplates.xaml
@@ -11,4 +11,7 @@
         <Image Source="{Binding Image, FallbackValue=null, Mode=OneWay}"
                Stretch="Uniform" />
     </DataTemplate>
+    <local:ImagePresenterSelector x:Key="ImagePresenterSelector"
+                                  Template="{StaticResource NormalTemplate}"
+                                  GifTemplate="{StaticResource GifTemplate}" />
 </ResourceDictionary>
