--- a/ExViewer/Views/SavedPage.xaml
+++ b/ExViewer/Views/SavedPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="ExViewer.Views.CachePage"
+﻿<Page x:Class="ExViewer.Views.SavedPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:local="using:ExViewer.Views"
@@ -32,14 +32,14 @@
                 </Grid>
             </CommandBar.Content>
             <CommandBar.PrimaryCommands>
-                <AppBarButton x:Uid="CachePageRefreshAppBarButton"
+                <AppBarButton x:Uid="SavedPageRefreshAppBarButton"
                               x:Name="abb_Refresh"
                               Command="{x:Bind VM.Refresh}"
                               Icon="Refresh"
                               Label="Refresh" />
             </CommandBar.PrimaryCommands>
             <CommandBar.SecondaryCommands>
-                <AppBarButton x:Uid="CachePageClearCacheAppBarButton"
+                <AppBarButton x:Uid="SavedPageClearCacheAppBarButton"
                               x:Name="abb_ClearCache"
                               Click="abb_ClearCache_Click"
                               Icon="Clear"
@@ -52,7 +52,7 @@
                              RelativePanel.Below="cb_top"
                              RefreshInvoked="PullToRefreshBox_RefreshInvoked">
             <ListView x:Name="lv"
-                      ItemsSource="{x:Bind VM.CachedGalleries, Mode=OneWay}"
+                      ItemsSource="{x:Bind VM.SavedGalleries, Mode=OneWay}"
                       Style="{StaticResource GalleryListViewStyle}"
                       CanDragItems="True"
                       DragItemsStarting="lv_DragItemsStarting"
@@ -70,12 +70,12 @@
                                                 ContinuumNavigationTransitionInfo.IsExitElement="True">
                             <FlyoutBase.AttachedFlyout>
                                 <MenuFlyout>
-                                    <MenuFlyoutItem x:Uid="CachePageDeleteMenuFlyout"
+                                    <MenuFlyoutItem x:Uid="SavedPageDeleteMenuFlyout"
                                                     x:Name="mfi_DeleteGallery"
                                                     Text="Delete"
                                                     Command="{Binding VM.Delete, ElementName=page}"
                                                     CommandParameter="{x:Bind}" />
-                                    <MenuFlyoutItem x:Uid="CachePageSaveToMenuFlyout"
+                                    <MenuFlyoutItem x:Uid="SavedPageSaveToMenuFlyout"
                                                     x:Name="mfi_SaveTo"
                                                     Text="Save to..."
                                                     Command="{Binding VM.SaveTo, ElementName=page}"
@@ -86,19 +86,19 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
                 <ListView.Footer>
-                    <TextBlock x:Uid="CachePageLoadingMoreTextBlock"
+                    <TextBlock x:Uid="SavedPageLoadingMoreTextBlock"
                                HorizontalAlignment="Center"
                                Margin="12"
                                Style="{StaticResource BaseTextBlockStyle}"
-                               Visibility="{x:Bind VM.CachedGalleries.HasMoreItems, FallbackValue=Visible, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}"
+                               Visibility="{x:Bind VM.SavedGalleries.HasMoreItems, FallbackValue=Visible, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}"
                                Text="Loading more galleries..." />
                 </ListView.Footer>
                 <ListView.Header>
-                    <TextBlock x:Uid="CachePageEmptyTextBlock"
+                    <TextBlock x:Uid="SavedPageEmptyTextBlock"
                                HorizontalAlignment="Center"
                                Margin="12"
                                Style="{StaticResource BaseTextBlockStyle}"
-                               Visibility="{x:Bind VM.CachedGalleries.Count, Mode=OneWay, Converter={StaticResource ZeroToVisibleConverter}, FallbackValue=Collapsed}"
+                               Visibility="{x:Bind VM.SavedGalleries.Count, Mode=OneWay, Converter={StaticResource ZeroToVisibleConverter}, FallbackValue=Collapsed}"
                                Text="No saved galleries" />
                 </ListView.Header>
             </ListView>
