bug fix for redirect filter; rename l10n strings
Former-commit-id: 66b92d9bd5183ae61f2b61c52e914141a799c3d5 [formerly a4e6720b51879ad5ed966018597c274e741c9469]
Former-commit-id: a08dd508d5ea822e6433ccc97e61c5fec1bd55fb

--- a/ExViewer/Views/SavedPage.xaml
+++ b/ExViewer/Views/SavedPage.xaml
@@ -39,9 +39,9 @@
                               Label="Refresh" />
             </CommandBar.PrimaryCommands>
             <CommandBar.SecondaryCommands>
-                <AppBarButton x:Uid="SavedPageClearCacheAppBarButton"
-                              x:Name="abb_ClearCache"
-                              Click="abb_ClearCache_Click"
+                <AppBarButton x:Uid="SavedPageDeleteAllAppBarButton"
+                              x:Name="abb_DeleteAll"
+                              Click="abb_DeleteAll_Click"
                               Icon="Clear"
                               Label="Delete all" />
             </CommandBar.SecondaryCommands>
