bug fix foe ehwiki
Former-commit-id: f3c6f3e5a15932b114802c17ce6015e5066e081d [formerly 716ba1b5306577be58a6117c9aa22960937ef5f7]
Former-commit-id: ff7dc7a508925dc822cfc721549a98653608e049

--- a/ExViewer/Views/EhWikiDialog.xaml
+++ b/ExViewer/Views/EhWikiDialog.xaml
@@ -10,6 +10,7 @@
                FullSizeDesired="True">
 
     <Grid>
+        <Border Width="500" />
         <WebView x:Name="wv"
                  NavigationStarting="wv_NavigationStarting" />
     </Grid>
