--- a/ExViewer/Views/CachedPage.xaml
+++ b/ExViewer/Views/CachedPage.xaml
@@ -1,13 +1,100 @@
-﻿<Page
-    x:Class="ExViewer.Views.CachedPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ExViewer.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+﻿<Page x:Class="ExViewer.Views.CachedPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:ExViewer.Views"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      NavigationCacheMode="Enabled"
+      x:Name="page"
+      mc:Ignorable="d"
+      xmlns:pr="using:PullToRefresh.UWP">
+    <Page.Transitions>
+        <TransitionCollection>
+            <NavigationThemeTransition>
+                <DrillInNavigationTransitionInfo />
+            </NavigationThemeTransition>
+        </TransitionCollection>
+    </Page.Transitions>
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
-    </Grid>
+    <RelativePanel>
+        <CommandBar x:Name="cb_top"
+                    RelativePanel.AlignLeftWithPanel="True"
+                    RelativePanel.AlignRightWithPanel="True"
+                    HorizontalContentAlignment="Stretch">
+            <CommandBar.Content>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="48" />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <Button Style="{StaticResource SplitButtonStyle}"
+                            Click="btn_Pane_Click" />
+                </Grid>
+            </CommandBar.Content>
+            <CommandBar.PrimaryCommands>
+                <AppBarButton x:Uid="CachedPageRefreshAppBarButton"
+                              x:Name="abb_Refresh"
+                              Command="{x:Bind VM.Refresh}"
+                              Icon="Refresh"
+                              Label="Refresh" />
+            </CommandBar.PrimaryCommands>
+            <CommandBar.SecondaryCommands>
+                <AppBarButton x:Uid="CachedPageDeleteAllAppBarButton"
+                              x:Name="abb_DeleteAll"
+                              Click="abb_DeleteAll_Click"
+                              Icon="Clear"
+                              Label="Delete all" />
+            </CommandBar.SecondaryCommands>
+        </CommandBar>
+        <pr:PullToRefreshBox RelativePanel.AlignBottomWithPanel="True"
+                             RelativePanel.AlignLeftWithPanel="True"
+                             RelativePanel.AlignRightWithPanel="True"
+                             RelativePanel.Below="cb_top"
+                             RefreshInvoked="PullToRefreshBox_RefreshInvoked">
+            <ListView x:Name="lv"
+                      ItemsSource="{x:Bind VM.Galleries, Mode=OneWay}"
+                      Style="{StaticResource GalleryListViewStyle}"
+                      ItemClick="lv_ItemClick"
+                      ContinuumNavigationTransitionInfo.ExitElementContainer="True">
+                <ListView.ItemTemplate>
+                    <DataTemplate xmlns:c="using:ExClient"
+                                  xmlns:controls="using:ExViewer.Controls"
+                                  x:DataType="c:Gallery">
+                        <controls:GalleryViewer x:Name="gv_Gallery"
+                                                Gallery="{x:Bind}"
+                                                RightTapped="gv_Gallery_RightTapped"
+                                                Holding="gv_Gallery_Holding"
+                                                Background="Transparent"
+                                                ContinuumNavigationTransitionInfo.IsExitElement="True">
+                            <FlyoutBase.AttachedFlyout>
+                                <MenuFlyout>
+                                    <MenuFlyoutItem x:Uid="CachedPageDeleteMenuFlyout"
+                                                    x:Name="mfi_DeleteGallery"
+                                                    Text="Delete"
+                                                    Command="{Binding VM.Delete, ElementName=page}"
+                                                    CommandParameter="{x:Bind}" />
+                                </MenuFlyout>
+                            </FlyoutBase.AttachedFlyout>
+                        </controls:GalleryViewer>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+                <ListView.Footer>
+                    <TextBlock x:Uid="CachedPageLoadingMoreTextBlock"
+                               HorizontalAlignment="Center"
+                               Margin="12"
+                               Style="{StaticResource BaseTextBlockStyle}"
+                               Visibility="{x:Bind VM.Galleries.HasMoreItems, FallbackValue=Visible, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}"
+                               Text="Loading more galleries..." />
+                </ListView.Footer>
+                <ListView.Header>
+                    <TextBlock x:Uid="CachedPageEmptyTextBlock"
+                               HorizontalAlignment="Center"
+                               Margin="12"
+                               Style="{StaticResource BaseTextBlockStyle}"
+                               Visibility="{x:Bind VM.Galleries.Count, Mode=OneWay, Converter={StaticResource ZeroToVisibleConverter}, FallbackValue=Collapsed}"
+                               Text="No cached galleries" />
+                </ListView.Header>
+            </ListView>
+        </pr:PullToRefreshBox>
+    </RelativePanel>
 </Page>
