japanese in time
Former-commit-id: d1831ba0288280f5dd3ecae617b2c130dbe4f2d0 [formerly a4ce21889513292f5e666de2b14ac65c76f35739]
Former-commit-id: 99a9a237a969cdc8704a101131d19b43db259e9b

--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -442,7 +442,8 @@
                                             </GridView.ItemContainerStyle>
                                             <GridView.ItemTemplate>
                                                 <DataTemplate x:DataType="client:Tag">
-                                                    <TextBlock Text="{x:Bind Converter={StaticResource TagToStringConverter}}"
+                                                    <TextBlock DataContext="{x:Bind Converter={StaticResource TagToStringConverter}}"
+                                                               Text="{Binding Value, Mode=OneWay}"
                                                                Padding="4,0" />
                                                 </DataTemplate>
                                             </GridView.ItemTemplate>
