--- a/ExViewer/Views/RootControl.xaml
+++ b/ExViewer/Views/RootControl.xaml
@@ -199,6 +199,7 @@
                        Background="{ThemeResource SystemControlPageBackgroundMediumAltMediumBrush}"
                        Visibility="Collapsed">
             <TextBlock x:Name="tb_DisableInfo"
+                       x:Uid="RootControlDisableInfoTextBlock"
                        Text="Operation in progress, plaese wait..."
                        RelativePanel.AlignVerticalCenterWithPanel="True"
                        RelativePanel.AlignHorizontalCenterWithPanel="True" />
