--- a/ExViewer/Settings/SettingPresenterTemplates.xaml
+++ b/ExViewer/Settings/SettingPresenterTemplates.xaml
@@ -12,4 +12,16 @@
                                        HorizontalAlignment="Stretch" />
         </StackPanel>
     </DataTemplate>
+    <DataTemplate x:Name="ExcludedLanguagesTemplate"
+                  x:DataType="settings:SettingInfo">
+        <StackPanel>
+            <TextBlock Text="{Binding FriendlyName}" />
+            <ScrollViewer HorizontalScrollMode="Auto"
+                          HorizontalScrollBarVisibility="Auto"
+                          VerticalScrollBarVisibility="Disabled">
+                <controls:ExcludedLanguagesSelector ExcludedLanguages="{Binding Value, Mode=TwoWay}"
+                                                    MinWidth="500" />
+            </ScrollViewer>
+        </StackPanel>
+    </DataTemplate>
 </ResourceDictionary>
